--- a/courses.html
+++ b/courses.html
@@ -47,7 +47,6 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="cards.html" class="nav-link active-link">Courses</a>
                         <a href="courses.html" class="nav-link active-link">Courses</a>
                     </li>
 
@@ -125,7 +124,7 @@
                             </div>
                         </div>
                         <h3 class="course-title">
-                            <a href="course1.html">
+                            <a href="courses/course1.html">
                                 How to prepare recipes with rescued food
                             </a>
                         </h3>
@@ -141,7 +140,7 @@
                         </div>
 
                         <span class="course-button">
-                            <a href="course1.html">
+                            <a href="courses/course1.html">
                                 Know Details <i class="uil uil-arrow-right course-button-icon"></i>
                             </a>
                         </span>
@@ -164,7 +163,7 @@
                             </div>
                         </div>
                         <h3 class="course-title">
-                            <a href="course2.html">
+                            <a href="courses/course2.html">
                                 How to create an ecological compost
                             </a>
                         </h3>
@@ -180,7 +179,7 @@
                         </div>
 
                         <span class="course-button">
-                            <a href="course2.html">
+                            <a href="courses/course2.html">
                                 Know Details <i class="uil uil-arrow-right course-button-icon"></i>
                             </a>
                         </span>
@@ -203,7 +202,7 @@
                             </div>
                         </div>
                         <h3 class="course-title">
-                            <a href="course3.html">
+                            <a href="courses/course3.html">
                                 How to transform ripe fruits into delicious jams
                             </a>
                         </h3>
@@ -219,7 +218,7 @@
                         </div>
 
                         <span class="course-button">
-                            <a href="course3.html">
+                            <a href="courses/course3.html">
                                 Know Details <i class="uil uil-arrow-right course-button-icon"></i>
                             </a>
                         </span>
@@ -242,7 +241,7 @@
                             </div>
                         </div>
                         <h3 class="course-title">
-                            <a href="course4.html">
+                            <a href="courses/course4.html">
                                 How to prepare food that is not suitable for humans to animal food
                             </a>
                         </h3>
@@ -258,7 +257,7 @@
                         </div>
 
                         <span class="course-button">
-                            <a href="course4.html">
+                            <a href="courses/course4.html">
                                 Know Details <i class="uil uil-arrow-right course-button-icon"></i>
                             </a>
                         </span>
@@ -281,7 +280,7 @@
                             </div>
                         </div>
                         <h3 class="course-title">
-                            <a href="course5.html">
+                            <a href="courses/course5.html">
                                 How to prepare food for donation to food banks and charities
                             </a>
                         </h3>
@@ -297,7 +296,7 @@
                         </div>
 
                         <span class="course-button">
-                            <a href="course5.html">
+                            <a href="courses/course5.html">
                                 Know Details <i class="uil uil-arrow-right course-button-icon"></i>
                             </a>
                         </span>
@@ -320,7 +319,7 @@
                             </div>
                         </div>
                         <h3 class="course-title">
-                            <a href="course6.html">
+                            <a href="courses/course6.html">
                                 How to convert food for humans to food for home composting
                             </a>
                         </h3>
@@ -336,7 +335,7 @@
                         </div>
 
                         <span class="course-button">
-                            <a href="course6.html">
+                            <a href="courses/course6.html">
                                 Know Details <i class="uil uil-arrow-right course-button-icon"></i>
                             </a>
                         </span>
@@ -359,7 +358,7 @@
                             </div>
                         </div>
                         <h3 class="course-title">
-                            <a href="course7.html">
+                            <a href="courses/course7.html">
                                 What are the most common food trends on the planet
                             </a>
                         </h3>
@@ -375,7 +374,7 @@
                         </div>
 
                         <span class="course-button">
-                            <a href="course7.html">
+                            <a href="courses/course7.html">
                                 Know Details <i class="uil uil-arrow-right course-button-icon"></i>
                             </a>
                         </span>
@@ -398,7 +397,7 @@
                             </div>
                         </div>
                         <h3 class="course-title">
-                            <a href="course8.html">
+                            <a href="courses/course8.html">
                                 How can we keep our food safe for human consumption
                             </a>
                         </h3>
@@ -414,7 +413,7 @@
                         </div>
 
                         <span class="course-button">
-                            <a href="course8.html">
+                            <a href="courses/course8.html">
                                 Know Details <i class="uil uil-arrow-right course-button-icon"></i>
                             </a>
                         </span>
@@ -437,7 +436,7 @@
                             </div>
                         </div>
                         <h3 class="course-title">
-                            <a href="course9.html">
+                            <a href="courses/course9.html">
                                 How food should be handled to keep it in a safe manner
                             </a>
                         </h3>
@@ -453,7 +452,7 @@
                         </div>
 
                         <span class="course-button">
-                            <a href="course9.html">
+                            <a href="courses/course9.html">
                                 Know Details <i class="uil uil-arrow-right course-button-icon"></i>
                             </a>
                         </span>
@@ -478,7 +477,7 @@
                             </div>
                         </div>
                         <h3 class="course-title">
-                            <a href="course10.html">
+                            <a href="courses/course10.html">
                                 How to prepare and cook food that has been wasted or recovered
                             </a>
                         </h3>
@@ -494,7 +493,7 @@
                         </div>
 
                         <span class="course-button">
-                            <a href="course10.html">
+                            <a href="courses/course10.html">
                                 Know Details <i class="uil uil-arrow-right course-button-icon"></i>
                             </a>
                         </span>
@@ -517,7 +516,7 @@
                             </div>
                         </div>
                         <h3 class="course-title">
-                            <a href="course11.html">
+                            <a href="courses/course11.html">
                                 How food is manufactured and how it is safe for consumption
                             </a>
                         </h3>
@@ -533,7 +532,7 @@
                         </div>
 
                         <span class="course-button">
-                            <a href="course11.html">
+                            <a href="courses/course11.html">
                                 Know Details <i class="uil uil-arrow-right course-button-icon"></i>
                             </a>
                         </span>
@@ -556,7 +555,7 @@
                             </div>
                         </div>
                         <h3 class="course-title">
-                            <a href="course12.html">
+                            <a href="courses/course12.html">
                                 How to prepare drinks and food pairing with wasted or recovered food
                             </a>
                         </h3>
@@ -572,7 +571,7 @@
                         </div>
 
                         <span class="course-button">
-                            <a href="course12.html">
+                            <a href="courses/course12.html">
                                 Know Details <i class="uil uil-arrow-right course-button-icon"></i>
                             </a>
                         </span>
@@ -595,7 +594,7 @@
                             </div>
                         </div>
                         <h3 class="course-title">
-                            <a href="course13.html">
+                            <a href="courses/course13.html">
                                 How to manage the expenses of a restaurant or food business
                             </a>   
                         </h3>
@@ -611,7 +610,7 @@
                         </div>
 
                         <span class="course-button">
-                            <a href="course13.html">
+                            <a href="courses/course13.html">
                                 Know Details <i class="uil uil-arrow-right course-button-icon"></i>
                             </a>
                         </span>
@@ -634,7 +633,7 @@
                             </div>
                         </div>
                         <h3 class="course-title">
-                            <a href="course14.html">
+                            <a href="courses/course14.html">
                                 How to make food of high quality for human and animal consumption
                             </a>
                         </h3>
@@ -650,7 +649,7 @@
                         </div>
 
                         <span class="course-button">
-                            <a href="course14.html">
+                            <a href="courses/course14.html">
                                 Know Details <i class="uil uil-arrow-right course-button-icon"></i>
                             </a>
                         </span>
@@ -673,7 +672,7 @@
                             </div>
                         </div>
                         <h3 class="course-title">
-                            <a href="course15.html">
+                            <a href="courses/course15.html">
                                 What are the legal norms that regulate the food industry and that make
                             </a>
                         </h3>
@@ -689,7 +688,7 @@
                         </div>
 
                         <span class="course-button">
-                            <a href="course15.html">
+                            <a href="courses/course15.html">
                                 Know Details <i class="uil uil-arrow-right course-button-icon"></i>
                             </a>
                         </span>
@@ -712,7 +711,7 @@
                             </div>
                         </div>
                         <h3 class="course-title">
-                            <a href="course16.html">
+                            <a href="courses/course16.html">
                                 Why is food labeled in supermarkets and what is it for
                             </a>
                         </h3>
@@ -728,7 +727,7 @@
                         </div>
 
                         <span class="course-button">
-                            <a href="course16.html">
+                            <a href="courses/course16.html">
                                 Know Details <i class="uil uil-arrow-right course-button-icon"></i>
                             </a>
                         </span>
@@ -751,7 +750,7 @@
                             </div>
                         </div>
                         <h3 class="course-title">
-                            <a href="course17.html">
+                            <a href="courses/course17.html">
                                 How to manage the finances of your restaurant or business
                             </a>
                         </h3>
@@ -767,7 +766,7 @@
                         </div>
 
                         <span class="course-button">
-                            <a href="course17.html">
+                            <a href="courses/course17.html">
                                 Know Details <i class="uil uil-arrow-right course-button-icon"></i>
                             </a>
                         </span>
@@ -790,7 +789,7 @@
                             </div>
                         </div>
                         <h3 class="course-title">
-                            <a href="course18.html">
+                            <a href="courses/course18.html">
                                 Why food should be sustainable and organic for humans
                             </a>
                         </h3>
@@ -806,7 +805,7 @@
                         </div>
 
                         <span class="course-button">
-                            <a href="course18.html">
+                            <a href="courses/course18.html">
                                 Know Details <i class="uil uil-arrow-right course-button-icon"></i>
                             </a>
                         </span>
@@ -831,7 +830,7 @@
                             </div>
                         </div>
                         <h3 class="course-title">
-                            <a href="course19.html">
+                            <a href="courses/course19.html">
                                 How to become public and noticeable in the different social networks
                             </a>
                         </h3>
@@ -847,7 +846,7 @@
                         </div>
 
                         <span class="course-button">
-                            <a href="course19.html">
+                            <a href="courses/course19.html">
                                 Know Details <i class="uil uil-arrow-right course-button-icon"></i>
                             </a>
                         </span>
@@ -870,7 +869,7 @@
                             </div>
                         </div>
                         <h3 class="course-title">
-                            <a href="course20.html">
+                            <a href="courses/course20.html">
                                 How to give and provide an adequate and efficient service to customers
                             </a>
                         </h3>
@@ -886,7 +885,7 @@
                         </div>
 
                         <span class="course-button">
-                            <a href="course20.html">
+                            <a href="courses/course20.html">
                                 Know Details <i class="uil uil-arrow-right course-button-icon"></i>
                             </a>
                         </span>
@@ -909,7 +908,7 @@
                             </div>
                         </div>
                         <h3 class="course-title">
-                            <a href="course21.html">
+                            <a href="courses/course21.html">
                                 What are the specific quality standards and what are they for
                             </a>
                         </h3>
@@ -925,7 +924,7 @@
                         </div>
 
                         <span class="course-button">
-                            <a href="course21.html">
+                            <a href="courses/course21.html">
                                 Know Details <i class="uil uil-arrow-right course-button-icon"></i>
                             </a>
                         </span>
