--- a/website.html
+++ b/website.html
@@ -917,8 +917,8 @@
                 <h6>(1-50 employees)</h6>
 
                 <ul class="footer-links">
-                    <li><a href="" class="footer-link">Food trends courses</a></li>
-                    <li><a href="" class="footer-link">Food safety courses</a></li>
+                    <li><a href="" class="footer-link">Food trends course</a></li>
+                    <li><a href="" class="footer-link">Food safety course</a></li>
                     <li><a href="" class="footer-link">All courses</a></li>
                 </ul>
             </div>
