--- a/courses/course19.html
+++ b/courses/course19.html
@@ -77,7 +77,7 @@
     <!-- MAIN START -->
     <main class="main">
 
-        <!-- PAGE TITLE -->
+        <!-- PAGE TITLE SECTION START -->
         <section class="page-title-area">
 
             <div class="page-title-wrapper container">
@@ -109,8 +109,9 @@
             </div>
 
         </section>
+        <!-- PAGE TITLE SECTION END -->
 
-        <!-- COURSE DETAILS -->
+        <!-- COURSE DETAILS SECTION START -->
         <section class="couse-details section">
 
             <div class="details-container grid container">
@@ -247,13 +248,16 @@
             </div>
 
         </section>
+        <!-- COURSE DETAILS SECTION END -->
 
-        <!-- COURSES -->
+        <!-- COURSES SECTION START -->
         <section class="courses section container" id="courses">
 
             <h2 class="section-title recommended-courses">Recommended Courses</h2>
 
             <div class="courses-container grid">
+
+                <!-- COURSE 20 START -->
                 <div class="course-item">
                     <div class="course-box">
                         <img src="img/RESCUED FOOD - Z-COURSE-20.png" alt="" class="course-img">
@@ -292,7 +296,9 @@
                         </span>
                     </div>
                 </div>
+                <!-- COURSE 20 END -->
 
+                <!-- COURSE 21 START -->
                 <div class="course-item">
                     <div class="course-box">
                         <img src="img/RESCUED FOOD - Z-COURSE-21.png" alt="" class="course-img">
@@ -331,7 +337,9 @@
                         </span>
                     </div>
                 </div>
+                <!-- COURSE 21 END -->
 
+                <!-- COURSE 1 START -->
                 <div class="course-item">
                     <div class="course-box">
                         <img src="img/RESCUED FOOD - Z-COURSE-1.png" alt="" class="course-img">
@@ -370,14 +378,17 @@
                         </span>
                     </div>
                 </div>
+                <!-- COURSE 1 END -->
 
             </div>
 
         </section>
+        <!-- COURSES SECTION END -->
 
     </main>
+    <!-- MAIN END -->
 
-    <!-- FOOTER -->
+    <!-- FOOTER START -->
     <footer class="footer section">
 
         <div class="footer-container grid container">
@@ -490,6 +501,7 @@
         </div>
 
     </footer>
+    <!-- FOOTER END -->
 
     <!-- CDN LINK -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
