--- a/courses/course20.html
+++ b/courses/course20.html
@@ -25,7 +25,7 @@
 
 <body>
 
-    <!-- HEADER -->
+    <!-- HEADER START -->
     <header class="header" id="header">
 
         <nav class="nav container">
@@ -35,27 +35,27 @@
             <div class="nav-menu" id="nav-menu">
                 <ul class="nav-list">
                     <li class="nav-item">
-                        <a href="website.html" class="nav-link">Home</a>
+                        <a href="../website.html" class="nav-link">Home</a>
                     </li>
 
                     <li class="nav-item">
-                        <a href="about.html" class="nav-link">About us</a>
+                        <a href="../about.html" class="nav-link">About us</a>
                     </li>
 
                     <li class="nav-item">
-                        <a href="guides.html" class="nav-link">Guides</a>
+                        <a href="../guides.html" class="nav-link">Guides</a>
                     </li>
 
                     <li class="nav-item">
-                        <a href="courses.html" class="nav-link active-link">Courses</a>
+                        <a href="../courses.html" class="nav-link active-link">Courses</a>
                     </li>
 
                     <li class="nav-item">
-                        <a href="contact.html" class="nav-link">Contact us</a>
+                        <a href="../contact.html" class="nav-link">Contact us</a>
                     </li>
 
                     <li class="nav-item">
-                        <a href="products.html" class="nav-link">Products</a>
+                        <a href="../products.html" class="nav-link">Products</a>
                     </li>
                 </ul>
 
@@ -72,11 +72,12 @@
         </nav>
 
     </header>
+    <!-- HEADER END -->
 
-    <!-- MAIN -->
+    <!-- MAIN START -->
     <main class="main">
 
-        <!-- PAGE TITLE -->
+        <!-- PAGE TITLE SECTION START -->
         <section class="page-title-area">
 
             <div class="page-title-wrapper container">
@@ -108,8 +109,9 @@
             </div>
 
         </section>
+        <!-- PAGE TITLE SECTION END -->
 
-        <!-- COURSE DETAILS -->
+        <!-- COURSE DETAILS SECTION START -->
         <section class="couse-details section">
 
             <div class="details-container grid container">
@@ -246,13 +248,16 @@
             </div>
 
         </section>
+        <!-- COURSE DETAILS SECTION END -->
 
-        <!-- COURSES -->
+        <!-- COURSES SECTION START -->
         <section class="courses section container" id="courses">
 
             <h2 class="section-title recommended-courses">Recommended Courses</h2>
 
             <div class="courses-container grid">
+
+                <!-- COURSE 21 START -->
                 <div class="course-item">
                     <div class="course-box">
                         <img src="img/RESCUED FOOD - Z-COURSE-21.png" alt="" class="course-img">
@@ -291,7 +296,9 @@
                         </span>
                     </div>
                 </div>
+                <!-- COURSE 21 END -->
 
+                <!-- COURSE 1 START -->
                 <div class="course-item">
                     <div class="course-box">
                         <img src="img/RESCUED FOOD - Z-COURSE-1.png" alt="" class="course-img">
@@ -330,7 +337,9 @@
                         </span>
                     </div>
                 </div>
+                <!-- COURSE 1 END -->
 
+                <!-- COURSE 2 START -->
                 <div class="course-item">
                     <div class="course-box">
                         <img src="img/RESCUED FOOD - Z-COURSE-2.png" alt="" class="course-img">
@@ -369,14 +378,17 @@
                         </span>
                     </div>
                 </div>
+                <!-- COURSE 2 END -->
 
             </div>
 
         </section>
+        <!-- COURSES SECTION END -->
 
     </main>
+    <!-- MAIN END -->
 
-    <!-- FOOTER -->
+    <!-- FOOTER START -->
     <footer class="footer section">
 
         <div class="footer-container grid container">
@@ -489,6 +501,7 @@
         </div>
 
     </footer>
+    <!-- FOOTER END -->
 
     <!-- CDN LINK -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
