--- a/courses/course15.html
+++ b/courses/course15.html
@@ -146,21 +146,23 @@
                     <img src="img/RESCUED FOOD - Z-COURSE-15.png" alt="" class="details-img">
                     <div class="course-description">
                         <h3 class="course-description-title">Course Overview</h3>
-                        <p class="course-description-details">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis, distinctio commodi saepe sint provident totam veritatis temporibus libero quo ex assumenda voluptatum laborum! Deserunt delectus tenetur illum veritatis iure corporis alias sit, est quae esse harum perferendis repellat sint vero? Perferendis cumque laboriosam, eius incidunt placeat delectus consectetur accusantium quis cupiditate repellendus at! Ut ipsum laborum delectus impedit nam cupiditate odit numquam et magnam, dolor aperiam dicta autem dolores error.</p>
+                        <p class="course-description-details">
+                            Food legislation refers to the set of laws and regulations that govern the production, distribution, sale and consumption of food. These regulations are designed to guarantee food safety, product quality, transparency in consumer information and compliance with health standards. Food legislation covers aspects such as food labeling, limits on additives and contaminants, manufacturing practices, regulation of genetically modified foods, and hygiene and safe food handling standards. These laws are essential to protect public health, ensure food integrity, and establish a legal framework that promotes consumer confidence in the food chain.
+                        </p>
                         <div class="description-list">
                             <h3 class="description-list-title">What is the target Audience?</h3>
                             <div class="description-list-details">
                                 <p class="description-list-data">
                                     <i class="uil uil-check details-icon"></i>
-                                    Lorem ipsum dolor sit amet.
+                                    Food industry companies
                                 </p>
                                 <p class="description-list-data">
                                     <i class="uil uil-check details-icon"></i>
-                                    Lorem ipsum dolor sit amet.
+                                    Governments and regulatory authorities
                                 </p>
                                 <p class="description-list-data">
                                     <i class="uil uil-check details-icon"></i>
-                                    Lorem ipsum dolor sit amet.
+                                    Public health professionals
                                 </p>
                             </div>
                         </div>
@@ -411,9 +413,9 @@
                 <h6>(1-50 employees)</h6>
 
                 <ul class="footer-links">
-                    <li><a href="" class="footer-link">Food trends courses</a></li>
-                    <li><a href="" class="footer-link">Food safety courses</a></li>
-                    <li><a href="" class="footer-link">All courses</a></li>
+                    <li><a href="course7.html" class="footer-link">Food trends course</a></li>
+                    <li><a href="course8.html" class="footer-link">Food safety course</a></li>
+                    <li><a href="../courses.html" class="footer-link">All courses</a></li>
                 </ul>
             </div>
 
@@ -422,11 +424,11 @@
                 <h6>(51-999 employees)</h6>
 
                 <ul class="footer-links">
-                    <li><a href="" class="footer-link">Food handling courses</a></li>
-                    <li><a href="" class="footer-link">Cooking and food preparation courses</a></li>
-                    <li><a href="" class="footer-link">Cost management courses</a></li>
-                    <li><a href="" class="footer-link">Beverage and Pairing Courses</a></li>
-                    <li><a href="" class="footer-link">All courses</a></li>
+                    <li><a href="course9.html" class="footer-link">Food handling course</a></li>
+                    <li><a href="course10.html" class="footer-link">Cooking and food preparation course</a></li>
+                    <li><a href="course13.html" class="footer-link">Cost management course</a></li>
+                    <li><a href="course12.html" class="footer-link">Beverage and Pairing course</a></li>
+                    <li><a href="../courses.html" class="footer-link">All courses</a></li>
                 </ul>
             </div>
 
@@ -435,11 +437,11 @@
                 <h6>(1000 employees)</h6>
 
                 <ul class="footer-links">
-                    <li><a href="" class="footer-link">Food Safety and Good Manufacturing Practices Courses</a></li>
-                    <li><a href="" class="footer-link">Food Quality Courses</a></li>
-                    <li><a href="" class="footer-link">Food Legislation Courses</a></li>
-                    <li><a href="" class="footer-link">Food Labeling Courses</a></li>
-                    <li><a href="" class="footer-link">All courses</a></li>
+                    <li><a href="course11.html" class="footer-link">Food Safety and Good Manufacturing Practices course</a></li>
+                    <li><a href="course14.html" class="footer-link">Food Quality course</a></li>
+                    <li><a href="course15.html" class="footer-link">Food Legislation course</a></li>
+                    <li><a href="course16.html" class="footer-link">Food Labeling course</a></li>
+                    <li><a href="../courses.html" class="footer-link">All courses</a></li>
                 </ul>
             </div>
         </div>
