--- a/courses/course18.html
+++ b/courses/course18.html
@@ -146,21 +146,29 @@
                     <img src="img/RESCUED FOOD - Z-COURSE-18.png" alt="" class="details-img">
                     <div class="course-description">
                         <h3 class="course-description-title">Course Overview</h3>
-                        <p class="course-description-details">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis, distinctio commodi saepe sint provident totam veritatis temporibus libero quo ex assumenda voluptatum laborum! Deserunt delectus tenetur illum veritatis iure corporis alias sit, est quae esse harum perferendis repellat sint vero? Perferendis cumque laboriosam, eius incidunt placeat delectus consectetur accusantium quis cupiditate repellendus at! Ut ipsum laborum delectus impedit nam cupiditate odit numquam et magnam, dolor aperiam dicta autem dolores error.</p>
+                        <p class="course-description-details">
+                            Sustainability and organic foods are related to agricultural and food practices that seek to minimize environmental impact, promote soil health, and offer healthier products. Sustainability in food involves considering the complete life cycle of food, from production to consumption and waste management, with the aim of reducing the ecological footprint.
+                            <br>
+                            <br>
+                            Organic foods are grown without the use of pesticides and synthetic fertilizers, and adhere to more sustainable agricultural practices. These products are often produced using methods that respect the environment, promote biodiversity, and seek to maintain soil health.
+                            <br>
+                            <br>
+                            Both concepts, sustainability and organic foods, reflect a growing concern for the health of the planet and people, promoting more responsible agricultural and consumer practices.
+                        </p>
                         <div class="description-list">
                             <h3 class="description-list-title">What is the target Audience?</h3>
                             <div class="description-list-details">
                                 <p class="description-list-data">
                                     <i class="uil uil-check details-icon"></i>
-                                    Lorem ipsum dolor sit amet.
+                                    Conscious consumers
                                 </p>
                                 <p class="description-list-data">
                                     <i class="uil uil-check details-icon"></i>
-                                    Lorem ipsum dolor sit amet.
+                                    Entrepreneurs and food business owners
                                 </p>
                                 <p class="description-list-data">
                                     <i class="uil uil-check details-icon"></i>
-                                    Lorem ipsum dolor sit amet.
+                                    Farmers and agricultural producers
                                 </p>
                             </div>
                         </div>
@@ -411,9 +419,9 @@
                 <h6>(1-50 employees)</h6>
 
                 <ul class="footer-links">
-                    <li><a href="" class="footer-link">Food trends courses</a></li>
-                    <li><a href="" class="footer-link">Food safety courses</a></li>
-                    <li><a href="" class="footer-link">All courses</a></li>
+                    <li><a href="course7.html" class="footer-link">Food trends course</a></li>
+                    <li><a href="course8.html" class="footer-link">Food safety course</a></li>
+                    <li><a href="../courses.html" class="footer-link">All courses</a></li>
                 </ul>
             </div>
 
@@ -422,11 +430,11 @@
                 <h6>(51-999 employees)</h6>
 
                 <ul class="footer-links">
-                    <li><a href="" class="footer-link">Food handling courses</a></li>
-                    <li><a href="" class="footer-link">Cooking and food preparation courses</a></li>
-                    <li><a href="" class="footer-link">Cost management courses</a></li>
-                    <li><a href="" class="footer-link">Beverage and Pairing Courses</a></li>
-                    <li><a href="" class="footer-link">All courses</a></li>
+                    <li><a href="course9.html" class="footer-link">Food handling course</a></li>
+                    <li><a href="course10.html" class="footer-link">Cooking and food preparation course</a></li>
+                    <li><a href="course13.html" class="footer-link">Cost management course</a></li>
+                    <li><a href="course12.html" class="footer-link">Beverage and Pairing course</a></li>
+                    <li><a href="../courses.html" class="footer-link">All courses</a></li>
                 </ul>
             </div>
 
@@ -435,11 +443,11 @@
                 <h6>(1000 employees)</h6>
 
                 <ul class="footer-links">
-                    <li><a href="" class="footer-link">Food Safety and Good Manufacturing Practices Courses</a></li>
-                    <li><a href="" class="footer-link">Food Quality Courses</a></li>
-                    <li><a href="" class="footer-link">Food Legislation Courses</a></li>
-                    <li><a href="" class="footer-link">Food Labeling Courses</a></li>
-                    <li><a href="" class="footer-link">All courses</a></li>
+                    <li><a href="course11.html" class="footer-link">Food Safety and Good Manufacturing Practices course</a></li>
+                    <li><a href="course14.html" class="footer-link">Food Quality course</a></li>
+                    <li><a href="course15.html" class="footer-link">Food Legislation course</a></li>
+                    <li><a href="course16.html" class="footer-link">Food Labeling course</a></li>
+                    <li><a href="../courses.html" class="footer-link">All courses</a></li>
                 </ul>
             </div>
         </div>
