--- a/courses/course2.html
+++ b/courses/course2.html
@@ -146,21 +146,23 @@
                     <img src="img/RESCUED FOOD - Z-COURSE-2.png" alt="" class="details-img">
                     <div class="course-description">
                         <h3 class="course-description-title">Course Overview</h3>
-                        <p class="course-description-details">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis, distinctio commodi saepe sint provident totam veritatis temporibus libero quo ex assumenda voluptatum laborum! Deserunt delectus tenetur illum veritatis iure corporis alias sit, est quae esse harum perferendis repellat sint vero? Perferendis cumque laboriosam, eius incidunt placeat delectus consectetur accusantium quis cupiditate repellendus at! Ut ipsum laborum delectus impedit nam cupiditate odit numquam et magnam, dolor aperiam dicta autem dolores error.</p>
+                        <p class="course-description-details">
+                            Composting is a natural process of breaking down organic materials, such as kitchen and garden scraps, to create an organic fertilizer called compost. During composting, decomposer microorganisms, such as bacteria and fungi, break down organic matter into nutrient-rich material that can be used to improve soil quality. This process helps reduce the amount of organic waste sent to landfills, contributes to environmental sustainability and promotes soil health by increasing its nutrient content and improving its structure. Composting is a common practice both at home and at the community or agricultural level.
+                        </p>
                         <div class="description-list">
                             <h3 class="description-list-title">What is the target Audience?</h3>
                             <div class="description-list-details">
                                 <p class="description-list-data">
                                     <i class="uil uil-check details-icon"></i>
-                                    Lorem ipsum dolor sit amet.
+                                    Organic farmers
                                 </p>
                                 <p class="description-list-data">
                                     <i class="uil uil-check details-icon"></i>
-                                    Lorem ipsum dolor sit amet.
+                                    Agricultural companies committed to sustainability
                                 </p>
                                 <p class="description-list-data">
                                     <i class="uil uil-check details-icon"></i>
-                                    Lorem ipsum dolor sit amet.
+                                    Hobbyist Gardeners
                                 </p>
                             </div>
                         </div>
@@ -411,9 +413,9 @@
                 <h6>(1-50 employees)</h6>
 
                 <ul class="footer-links">
-                    <li><a href="" class="footer-link">Food trends courses</a></li>
-                    <li><a href="" class="footer-link">Food safety courses</a></li>
-                    <li><a href="" class="footer-link">All courses</a></li>
+                    <li><a href="course7.html" class="footer-link">Food trends course</a></li>
+                    <li><a href="course8.html" class="footer-link">Food safety course</a></li>
+                    <li><a href="../courses.html" class="footer-link">All courses</a></li>
                 </ul>
             </div>
 
@@ -422,11 +424,11 @@
                 <h6>(51-999 employees)</h6>
 
                 <ul class="footer-links">
-                    <li><a href="" class="footer-link">Food handling courses</a></li>
-                    <li><a href="" class="footer-link">Cooking and food preparation courses</a></li>
-                    <li><a href="" class="footer-link">Cost management courses</a></li>
-                    <li><a href="" class="footer-link">Beverage and Pairing Courses</a></li>
-                    <li><a href="" class="footer-link">All courses</a></li>
+                    <li><a href="course9.html" class="footer-link">Food handling course</a></li>
+                    <li><a href="course10.html" class="footer-link">Cooking and food preparation course</a></li>
+                    <li><a href="course13.html" class="footer-link">Cost management course</a></li>
+                    <li><a href="course12.html" class="footer-link">Beverage and Pairing course</a></li>
+                    <li><a href="../courses.html" class="footer-link">All courses</a></li>
                 </ul>
             </div>
 
@@ -435,11 +437,11 @@
                 <h6>(1000 employees)</h6>
 
                 <ul class="footer-links">
-                    <li><a href="" class="footer-link">Food Safety and Good Manufacturing Practices Courses</a></li>
-                    <li><a href="" class="footer-link">Food Quality Courses</a></li>
-                    <li><a href="" class="footer-link">Food Legislation Courses</a></li>
-                    <li><a href="" class="footer-link">Food Labeling Courses</a></li>
-                    <li><a href="" class="footer-link">All courses</a></li>
+                    <li><a href="course11.html" class="footer-link">Food Safety and Good Manufacturing Practices course</a></li>
+                    <li><a href="course14.html" class="footer-link">Food Quality course</a></li>
+                    <li><a href="course15.html" class="footer-link">Food Legislation course</a></li>
+                    <li><a href="course16.html" class="footer-link">Food Labeling course</a></li>
+                    <li><a href="../courses.html" class="footer-link">All courses</a></li>
                 </ul>
             </div>
         </div>
