--- a/courses/course3.html
+++ b/courses/course3.html
@@ -146,21 +146,23 @@
                     <img src="img/RESCUED FOOD - Z-COURSE-3.png" alt="" class="details-img">
                     <div class="course-description">
                         <h3 class="course-description-title">Course Overview</h3>
-                        <p class="course-description-details">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis, distinctio commodi saepe sint provident totam veritatis temporibus libero quo ex assumenda voluptatum laborum! Deserunt delectus tenetur illum veritatis iure corporis alias sit, est quae esse harum perferendis repellat sint vero? Perferendis cumque laboriosam, eius incidunt placeat delectus consectetur accusantium quis cupiditate repellendus at! Ut ipsum laborum delectus impedit nam cupiditate odit numquam et magnam, dolor aperiam dicta autem dolores error.</p>
+                        <p class="course-description-details">
+                            Jams and preserves are culinary products that involve the preparation and preservation of fruits by cooking with sugar and other ingredients. These products are created by cooking whole or chopped fruits with sugar and sometimes pectin, which is a substance that helps gel the mixture. Cooking removes excess water and creates a thick, creamy consistency. Jams tend to contain pieces of fruit, while preserves may contain whole fruit or puree. This process not only enhances the flavor of the fruits, but also prolongs their shelf life by preventing decay. Jams and preserves are popular as spreads on bread, toast or as a complement to various recipes.
+                        </p>
                         <div class="description-list">
                             <h3 class="description-list-title">What is the target Audience?</h3>
                             <div class="description-list-details">
                                 <p class="description-list-data">
                                     <i class="uil uil-check details-icon"></i>
-                                    Lorem ipsum dolor sit amet.
+                                    Health-conscious consumers
                                 </p>
                                 <p class="description-list-data">
                                     <i class="uil uil-check details-icon"></i>
-                                    Lorem ipsum dolor sit amet.
+                                    Customers of natural markets or specialized stores
                                 </p>
                                 <p class="description-list-data">
                                     <i class="uil uil-check details-icon"></i>
-                                    Lorem ipsum dolor sit amet.
+                                    Lovers of artisanal products
                                 </p>
                             </div>
                         </div>
@@ -411,9 +413,9 @@
                 <h6>(1-50 employees)</h6>
 
                 <ul class="footer-links">
-                    <li><a href="" class="footer-link">Food trends courses</a></li>
-                    <li><a href="" class="footer-link">Food safety courses</a></li>
-                    <li><a href="" class="footer-link">All courses</a></li>
+                    <li><a href="course7.html" class="footer-link">Food trends course</a></li>
+                    <li><a href="course8.html" class="footer-link">Food safety course</a></li>
+                    <li><a href="../courses.html" class="footer-link">All courses</a></li>
                 </ul>
             </div>
 
@@ -422,11 +424,11 @@
                 <h6>(51-999 employees)</h6>
 
                 <ul class="footer-links">
-                    <li><a href="" class="footer-link">Food handling courses</a></li>
-                    <li><a href="" class="footer-link">Cooking and food preparation courses</a></li>
-                    <li><a href="" class="footer-link">Cost management courses</a></li>
-                    <li><a href="" class="footer-link">Beverage and Pairing Courses</a></li>
-                    <li><a href="" class="footer-link">All courses</a></li>
+                    <li><a href="course9.html" class="footer-link">Food handling course</a></li>
+                    <li><a href="course10.html" class="footer-link">Cooking and food preparation course</a></li>
+                    <li><a href="course13.html" class="footer-link">Cost management course</a></li>
+                    <li><a href="course12.html" class="footer-link">Beverage and Pairing course</a></li>
+                    <li><a href="../courses.html" class="footer-link">All courses</a></li>
                 </ul>
             </div>
 
@@ -435,11 +437,11 @@
                 <h6>(1000 employees)</h6>
 
                 <ul class="footer-links">
-                    <li><a href="" class="footer-link">Food Safety and Good Manufacturing Practices Courses</a></li>
-                    <li><a href="" class="footer-link">Food Quality Courses</a></li>
-                    <li><a href="" class="footer-link">Food Legislation Courses</a></li>
-                    <li><a href="" class="footer-link">Food Labeling Courses</a></li>
-                    <li><a href="" class="footer-link">All courses</a></li>
+                    <li><a href="course11.html" class="footer-link">Food Safety and Good Manufacturing Practices course</a></li>
+                    <li><a href="course14.html" class="footer-link">Food Quality course</a></li>
+                    <li><a href="course15.html" class="footer-link">Food Legislation course</a></li>
+                    <li><a href="course16.html" class="footer-link">Food Labeling course</a></li>
+                    <li><a href="../courses.html" class="footer-link">All courses</a></li>
                 </ul>
             </div>
         </div>
