--- a/RescuedFood.html
+++ b/RescuedFood.html
@@ -7,6 +7,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Author" lang="en" content="Rescued Food Inc">
+    <meta name="keywords" content="Food, Waste, Rescued Food, Food Waste, Solutions, Courses, Guides, Videos">
+    <meta name="description" content="Learn how to combat food waste and rescue your food.
+    Become an expert because we help you.">
+    <meta name="copyright" content="copyright © RescuedFoodInc.com">
+    <meta name="robots" content="">
     <title>Rescued Food Website</title>
 
     <!-- UNICONS lINKS -->
@@ -14,7 +20,7 @@
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/solid.css">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="website.css">
+    <link rel="stylesheet" href="RescuedFood.css">
 
     <!-- CDN'S LINKS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
@@ -161,9 +167,10 @@
                 </div>
                 <div class="about-data">
                     <h2 class="section-title about-title">Information About <br> Rescued Food</h2>
-                    <p class="about-description">We are an Incorporation that helps people in a computerized way by
-                        providing guides created by a trained and expert team in the topics covered in the guides. We
-                        also have:</p>
+                    <p class="about-description">
+                        We are an Incorporation that helps people in a computerized way by providing guides created be  a trained and expert team in the topics covered in the guides. 
+                        We also have:
+                    </p>
                     <div class="about-details">
                         <p class="about-details-description">
                             Videos that deal with a diversity of interesting topics.
@@ -207,9 +214,7 @@
                             <div class="choose-details">
                                 <h2 class="section-title choose-title">Complete Guides</h2>
                                 <p class="choose-description">
-                                    All Rescued Food guides use cutting-edge AI technology to get all kinds of
-                                    information online about food waste or rescued food. Whenever you enter the guides,
-                                    you will see many features, such as:
+                                    All Rescued Food guides use cutting-edge AI technology to get all kinds of information online about food waste or rescued food. Whenever you enter the guides, you will see many features, such as:
                                 </p>
 
                                 <p class="choose-details-description">
@@ -224,8 +229,7 @@
 
                                 <p class="choose-details-description">
                                     <i class="fa fa-check" aria-hidden="true"></i>
-                                    The guides have features such as that they can be downloaded for reading in case you
-                                    do not have internet connection and also the option to be able to share them.
+                                    The guides have features such as that they can be downloaded for reading in case you do not have internet connection and also the option to be able to share them.
                                 </p>
                             </div>
                         </div>
@@ -243,23 +247,17 @@
                             <div class="choose-details">
                                 <h2 class="section-title choose-title">Efficient videos</h2>
                                 <p class="choose-description">
-                                    Our videos run smoothly in the background, providing maximum viewing while using
-                                    minimal resources on your device. Rescued Food videos consistently deliver the best
-                                    information on food waste and rescued food. In addition, they offer:
+                                    Our videos run smoothly in the background, providing maximum viewing while using minimal resources on your device. Rescued Food videos consistently deliver the best information on food waste and rescued food. In addition, they offer:
                                 </p>
 
                                 <p class="choose-details-description">
                                     <i class="fa fa-check" aria-hidden="true"></i>
-                                    Rescued Food videos are an effective way to visually report information on various
-                                    topics. They can show demonstrations, tutorials, graphics, maps, and more, making it
-                                    easy to understand complex concepts.
+                                    Rescued Food videos are an effective way to visually report information on various topics. They can show demonstrations, tutorials, graphics, maps, and more, making it easy to understand complex concepts.
                                 </p>
 
                                 <p class="choose-details-description">
                                     <i class="fa fa-check" aria-hidden="true"></i>
-                                    Rescued Food videos can also be educational. They are a valuable tool for acquiring
-                                    information. In addition, our videos are used in educational settings to explain
-                                    concepts, illustrate experiments or provide interactive lessons.
+                                    Rescued Food videos can also be educational. They are a valuable tool for acquiring information. In addition, our videos are used in educational settings to explain concepts, illustrate experiments or provide interactive lessons.
                                 </p>
 
                             </div>
@@ -278,22 +276,17 @@
                             <div class="choose-details">
                                 <h2 class="section-title choose-title">Courses efficent for everyone</h2>
                                 <p class="choose-description">
-                                    Over the past few years, there has been criticism of courses that are not suitable
-                                    for everyone because they do not cover every country in the world. So, we try to
-                                    have teachers suitable for every language in the world. With Rescued Food courses,
-                                    you will be able to do the following
+                                    Over the past few years, there has been criticism of courses that are not suitable for everyone because they do not cover every country in the world. So, we try to have teachers suitable for every language in the world. With Rescued Food courses, you will be able to do the following
                                 </p>
 
                                 <p class="choose-details-description">
                                     <i class="fa fa-check" aria-hidden="true"></i>
-                                    Get concrete and precise information virtually on the different topics covered by
-                                    the Rescued Food Incorporation.
+                                    Get concrete and precise information virtually on the different topics covered by the Rescued Food Incorporation.
                                 </p>
 
                                 <p class="choose-details-description">
                                     <i class="fa fa-check" aria-hidden="true"></i>
-                                    Take care of and protect all your vegetables and fruits, so you don't have to waste
-                                    them.
+                                    Take care of and protect all your vegetables and fruits, so you don't have to waste them.
                                 </p>
 
                             </div>
